--- a/templates/points.html
+++ b/templates/points.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-        <title>NFL: Defense v. Offense</title>
+        <title>Points Scored vs. Points Allowed</title>
 
          <!-- Bootstrap CSS CDN -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -104,8 +104,10 @@
                 </nav>
 
                 <h3>Points Scored vs. Points Allowed</h3>
-                <p> Visualizing wins (size of bubble) on one axis of the offensive 
-					statistic and another axis of the defensive statistic. </p>
+                <p>Visualizing season wins (radius of bubble) on an x-axis of points scored
+				and a y-axis of points allowed.  Motion plays all seasons in dataset.  Mouseover
+				year to stop motion on a particular season.  Mouseover bubble to display 
+				name of team.</p>
 
                 <div class="line"></div>
 
