--- a/templates/synopsis.html
+++ b/templates/synopsis.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-        <title>NFL: Defense v. Offense</title>
+        <title>NFL: Defense v. Offense Synopsis</title>
 
          <!-- Bootstrap CSS CDN -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -95,24 +95,32 @@
                 </nav>
 
                 <h1>What Wins Football Games: Offense or Defense?</h1>
-                <h3> Team Members: Sharon Parks, Joshua Mu, Kelvin So, Ram Chepuri, Corey Plott</h3>
+                <div class="line"></div>
+                <h3 id="myH3">Team Members: Sharon Parks, Joshua Mu, Kelvin So, Ram Chepuri, Corey Plott</h3>
+                <div class="line"></div>
                 <p> Project Scope: Comparing the offensive and defensive stats for all NFL teams during the year for the last twenty years and analyzing how those stats yield wins. </p>
-                <p> Initial hypothesis: While the phrase “Defense wins championships, but offense wins games” is popular among the football community, our group is interested how accurate this statement is. 
+                <p> Initial hypothesis: While the phrase “Defense wins championships, but offense wins games” is popular among the football community, our group is interested how accurate this statement is.</p>
                   
                  <p> Data pulled:
-                  1.	Defensive stats allowed (y-axis):
-                      a.	Turnovers allowed
-                      b.	Passing yards allowed
-                      c.	Rushing yards allowed and 
-                      d.	Points allowed
-                  2.	Offensive stats gained (x axis):
-                      a.	Turnovers 
-                      b.	Passing yards gained
-                      c.	Rushing yards gained and
-                      d.	Points scored
-                  3.	Team wins (bubble radius)
+                        <ol id="myOL">
+                            <li>Defensive stats allowed (y-axis):</li>
+                                <ol type="a">
+                                    <li>Turnovers allowed</li>
+                                    <li>Passing yards allowed</li>
+                                    <li>Rushing yards allowed</li> 
+                                    <li>Points allowed</li>
+                                </ol>
+                            <li>Offensive stats gained (x axis):</li>
+                                <ol type="a">
+                                    <li>Turnovers</li>
+                                    <li>Passing yards gained</li>
+                                    <li>Rushing yards gained and</li>
+                                    <li>Points scored</li>
+                                </ol>
+                            <li>Team wins (bubble radius)</li>
+                        </ol>
                   </p>    
-                   </p>
+                
               
                    <p>Inspiring visualization: The final product, a motion chart like the one below, will show the offensive yards on the x axis, the defensive yards allowed on the y axis and the team wins will reflect the bubble radius. </p>
               
