--- a/templates/synopsis.html
+++ b/templates/synopsis.html
@@ -98,7 +98,7 @@
                 <div class="line"></div>
                 <h3 id="myH3">Team Members: Sharon Parks, Joshua Mu, Kelvin So, Ram Chepuri, Corey Plott</h3>
                 <div class="line"></div>
-                <p> Project Scope: Comparing the offensive and defensive stats for all NFL teams during the year for the last twenty years and analyzing how those stats yield wins. </p>
+                <p> Project Scope: Comparing the offensive and defensive stats for all NFL teams during the year for the last twenty years, and analyzing how those stats yield wins. </p>
                 <p> Initial hypothesis: While the phrase “Defense wins championships, but offense wins games” is popular among the football community, our group is interested how accurate this statement is.</p>
                   
                  <p> Data pulled:
@@ -114,7 +114,7 @@
                                 <ol type="a">
                                     <li>Turnovers</li>
                                     <li>Passing yards gained</li>
-                                    <li>Rushing yards gained and</li>
+                                    <li>Rushing yards gained</li>
                                     <li>Points scored</li>
                                 </ol>
                             <li>Team wins (bubble radius)</li>
